# sf-rs

./: .bacon-locations  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  bacon.toml  docker-compose.yml  justfile  rustfmt.toml  sf-node.rs
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: lint-toml.yml  rust-test.yml  rust.yml
docker/: docker-compose.yml  proxy.Dockerfile  proxy.py
example-bug/: Cargo.toml
example-bug/src/: main.rs
proto/: keep-alive.proto
sf-core/: Cargo.toml
sf-core/src/: connection.rs  lib.rs  listener.rs  muxing.rs  protocol.rs  stream.rs  transport.rs
sf-core/src/muxing/: boxed.rs
sf-core/src/transport/: boxed.rs  map.rs  map_err.rs
sf-ice/: Cargo.toml
sf-ice/src/: args.rs  builder.rs  error.rs  main.rs  server.rs  ws_handler.rs
sf-logging/: Cargo.toml
sf-logging/src/: lib.rs
sf-metrics/: Cargo.toml
sf-metrics/src/: interface.rs  lib.rs
sf-metrics/src/inmemory/: common.rs  counter.rs  gauge.rs  histogram.rs  implementation.rs  mod.rs
sf-node/: Cargo.toml
sf-node/examples/: load_web_transport.rs  load_web_transport_client.rs
sf-node/src/: builder.rs  connection.rs  error.rs  event.rs  executor.rs  lib.rs  listener.rs  node.rs  peer.rs  peer_manager.rs  stream.rs  transport.rs
sf-node/src/peer/: manager.rs  task.rs
sf-peer-id/: Cargo.toml
sf-peer-id/src/: error.rs  hex.rs  lib.rs  peer_id.rs  serde.rs
sf-proto/: Cargo.toml  build.rs
sf-proto/proto/: identity.proto
sf-proto/src/: lib.rs
sf-proto/src/proto/: identity.rs
sf-protocol/: Cargo.toml
sf-protocol/src/: lib.rs  peer_event.rs  peer_request.rs  rtc_sdp_wrapper.rs  session_description.rs
sf-server/: Cargo.toml  Dockerfile  README.md
sf-server/src/: args.rs  builder.rs  error.rs  extract_peer_id.rs  logging.rs  main.rs  peer_handler.rs  peer_id.rs  server.rs  socket_metadata.rs  state.rs  ws.rs  ws_handler.rs
sf-test/: BUILD  Cargo.toml  json5format.profdata
sf-test/src/: builder.rs  extract_peer_id.rs  main.rs  peer_handler.rs  peer_id.rs  server.rs  socket_metadata.rs  state.rs  ws.rs
sf-viz/: Cargo.toml  Dioxus.toml  eslint.config.js  package.json  pnpm-lock.yaml
sf-viz/assets/: main.css
sf-viz/src/: App.css  App.tsx  main.rs
sf-viz/src/ui/: home.rs  mod.rs  navbar.rs  peers.rs
sf-viz/src/wt/: client.rs
sf-wasm/: Cargo.toml  build.rs  index.html  test.html
sf-wasm-2/: Cargo.toml  index.html
sf-wasm-2/src/: callback.rs  client.rs  lib.rs  log.rs  logging.rs  peer.rs  peer_manager.rs  wasm.rs  websocket.rs
sf-wasm-2/src/web_rtc/: errors.rs  futures.rs  ice.rs  ice_server.rs  ice_server_config.rs  mod.rs  sdp.rs  sdp_type.rs
sf-wasm/src/: bindings.rs  client.rs  lib.rs  logging.rs  peer.rs  peer_manager.rs  websocket.rs
sf-wasm/src/proto/: keep_alive.rs
sf-webrtc/: Cargo.toml
sf-webrtc/.cargo/: config.toml
sf-webrtc/src/: errors.rs  ice.rs  ice_server.rs  lib.rs  mod.rs  sdp.rs  sdp_type.rs
sf-webrtc/src/data_channel/: futures.rs  mod.rs
sf-webrtc/src/peer_connection/: futures.rs  mod.rs
sf-wt/: Cargo.toml  README.md  build.rs
sf-wt-transport/: Cargo.toml
sf-wt-transport/src/: connection.rs  error.rs  lib.rs  stream.rs  transport.rs
sf-wt-transport/src/connection/: connecting.rs  stream.rs  upgrade.rs
sf-wt-transport/src/listener/: mod.rs  native.rs  wasm.rs
sf-wt-transport/src/platform/: mod.rs  native.rs  wasm.rs
sf-wt-wasm/: Cargo.toml
sf-wt/src/: connection.rs  main.rs  routes.rs  web.rs
sf-wt/src/proto/: keep_alive.rs
