[workspace]
members = [
  "sf-node",
  "sf-core", 
  "sf-wt-transport", "sf-proto",
  #"sf-server",
  #"sf-protocol",
  #"sf-logging",
  #"sf-peer-id",
  #"sf-wasm",
  #"sf-webrtc",
  #"sf-server-grpc",
  #"sf-wt", "sf-wt-wasm", "sf-viz", "sf-core", "sf-peer-store", "sf-wt-transport", "sf-node", "example-bug",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.10", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde-wasm-bindgen = { version = "0.6", default-features = false }

tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }

tokio = { version = "1.45", default-features = false }
tokio-tungstenite = { version = "0.26", default-features = false }

tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-test = { version = "0.2", default-features = false }
tracing-log = { version = "0.2", default-features = false }
tracing-wasm = { version = "0.2", default-features = false }

clap = { version = "4.5", default-features = false }

http-body-util = { version = "0.1", default-features = false }

thiserror = { version = "2.0", default-features = false }

serial_test = { version = "3.2", default-features = false }

dashmap = { version = "6.1", default-features = false }

futures = { version = "0.3", default-features = false }

wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }

web-sys = { version = "0.3", default-features = false }
js-sys = { version = "0.3", default-features = false }

gloo-net = { version = "0.6", default-features = false }
gloo-utils = { version = "0.2", default-features = false }
gloo-events = { version = "0.2", default-features = false }

typeshare = { version = "1.0", default-features = false }

lazy_static = { version = "1.4", default-features = false }

pin-project = { version = "1.0", default-features = false }

metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { git = "https://github.com/sfroment/metrics", branch = "dev/sfroment/wasm", default-features = false }
metrics-util = { git = "https://github.com/sfroment/metrics", branch = "dev/sfroment/wasm", default-features = false }

once_cell = { version = "1.21", default-features = false }

unsigned-varint = { version = "0.8", default-features = false }

getrandom = { version = "0.3", default-features = false }

bincode = { version = "2.0", default-features = false }

console_error_panic_hook = { version = "0.1", default-features = false }

anyhow = { version = "1.0", default-features = false }

prost = { version = "0.13", default-features = false }
tonic = { version = "0.13", default-features = false }
tonic-build = { version = "0.13", default-features = false }

multiaddr =  { version = "0.18" } 

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ['cfg(coverage)']

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
