[package]
name = "sf-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
portable-atomic = { version = "1", features = ["float"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tracing-test = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
