[package]
name = "sf-node"
version = "0.1.0"
edition = "2024"

[dependencies]
multiaddr =  { version = "0.18" } 

libp2p-identity = { version = "0.2" }

sf-core = { path = "../sf-core" }

wasm-bindgen-futures = "0.4"

thiserror = { version = "2"}

tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
