[package]
name = "sf-peer-id"
version = "0.1.0"
edition = "2024"

[dependencies]
unsigned-varint = { version = "0.8.0", default-features = false }
serde = { version = "1.0.116", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

[features]
default = ["std", "serde"]
std = ["unsigned-varint/std"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)']
