[package]
name = "sf-peer-id"
version = "0.1.0"
edition = "2024"

[dependencies]
unsigned-varint = { workspace = true }

serde = { workspace = true, optional = true, default-features = false }
serde-wasm-bindgen = { workspace = true, optional = true }

getrandom = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, features = [
  "serde-serialize",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
serde_json = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true, features = ["serde"] }

[features]
default = ["std", "serde"]
std = ["unsigned-varint/std"]
serde = ["dep:serde"]
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:getrandom"]

[package.metadata.docs.rs]
all-features = true

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)']
