[package]
name = "sf-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
sf-peer-id = { path = "../sf-peer-id" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["RtcSdpType"] }
sf-webrtc = { path = "../sf-webrtc" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
