[package]
name = "sf-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sf-metrics = { path = "../sf-metrics" }
sf-logging = { path = "../sf-logging" }
sf-protocol = { path = "../sf-protocol" }
sf-peer-id = { path = "../sf-peer-id", default-features = false, features = [
  "std",
  "serde",
] }

axum = { workspace = true, features = ["ws", "macros", "tokio", "http2"] }
axum-extra = { workspace = true, features = ["query"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }

http-body-util = { workspace = true }

thiserror = { workspace = true }

clap = { workspace = true, features = ["env", "derive", "default"] }

serial_test = { workspace = true }

dashmap = { workspace = true }

futures = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }

[profile.dev]
incremental = true

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)']
