[package]
name = "sf-wasm-2"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "console",
  "Window",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlDivElement",
  "HtmlDocument",
  "HtmlElement",
  "WebSocket",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
typeshare = "1.0"
sf-peer-id = { path = "../sf-peer-id" }
sf-typed-event-emitter = { path = "../sf-typed-event-emitter" }
sf-protocol = { path = "../sf-protocol" }
gloo-net = "0.6.0"
gloo-console = "0.3.0"

