[package]
name = "sf-wasm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-wasm = "0.2"

futures = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcDataChannelEvent",
  "RtcIceServer",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "EventListener",
  "RtcIceGatheringState",
  "RtcSessionDescription",
  "RtcOfferOptions",
  "RtcAnswerOptions",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "console",
  "Window",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlDivElement",
  "HtmlDocument",
  "HtmlElement",
  "WebSocket",
  "RtcSignalingState",
  "RtcPeerConnectionState",
] }
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"

typeshare = "1.0"

sf-peer-id = { path = "../sf-peer-id", features = ["wasm"] }
sf-protocol = { path = "../sf-protocol" }
sf-metrics = { path = "../sf-metrics" }
sf-webrtc = { path = "../sf-webrtc" }
metrics-exporter-prometheus = { git = "https://github.com/sfroment/metrics", branch = "dev/sfroment/wasm", features = [
  "push-gateway",
] }

gloo-net = "0.6.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
gloo-events = "0.2.0"

lazy_static = "1.4"

pin-project = { version = "1.0" }

thiserror = "2"
console_error_panic_hook = "0.1.7"

metrics = { version = "0.24" }
metrics-util = { git = "https://github.com/sfroment/metrics", branch = "dev/sfroment/wasm", features = [
  "recency",
  "registry",
  "storage",
] }

[profile.dev]
panic = "unwind"
