[package]
name = "sf-wasm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing-wasm = { workspace = true }

futures = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

web-sys = { workspace = true }
js-sys = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

typeshare = { workspace = true }

sf-peer-id = { path = "../sf-peer-id", features = ["wasm"] }
sf-protocol = { path = "../sf-protocol" }
sf-metrics = { path = "../sf-metrics" }
sf-webrtc = { path = "../sf-webrtc" }
metrics-exporter-prometheus = { workspace = true, features = ["push-gateway"] }

gloo-net = { workspace = true, features = ["websocket"] }
gloo-utils = { workspace = true }
gloo-events = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }

lazy_static = { workspace = true }

pin-project = { workspace = true }

thiserror = { workspace = true }
console_error_panic_hook = { workspace = true }

metrics = { workspace = true }
metrics-util = { workspace = true, features = [
  "recency",
  "registry",
  "storage",
] }

tonic = { workspace = true, features = ["codegen", "prost"] }
prost = { workspace = true, features = ["derive", "std"] }
tonic-web = { version = "0.13" }
tonic-web-wasm-client = "0.7"

tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1", features = ["sync", "rt"] }

futures-util = { version = "0.3" }

#moq-native = { version = "0.6" }
moq-transfork = { version = "0.12" }

url = { version = "2.5.2" }

hex = { version = "0.4" }

anyhow = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }


[profile.dev]
panic = "unwind"
