[package]
name = "sf-webrtc"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
futures = { workspace = true, features = ["alloc"] }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

web-sys = { workspace = true, features = [
  "ErrorEvent",
  "Blob",
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcDataChannelEvent",
  "RtcIceServer",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcSessionDescription",
  "RtcOfferOptions",
  "RtcAnswerOptions",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSignalingState",
  "RtcPeerConnectionState",
  "RtcDataChannelState",
] }
js-sys = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

typeshare = { workspace = true }

sf-peer-id = { path = "../sf-peer-id" }
sf-metrics = { path = "../sf-metrics" }

gloo-net = { workspace = true }
gloo-utils = { workspace = true }
gloo-events = { workspace = true }

lazy_static = { workspace = true }

pin-project = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }

metrics = { workspace = true }

once_cell = { workspace = true }

[profile.dev]
panic = "unwind"
