[package]
name = "sf-wt-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
moq-transfork = { version = "0.12.0" }

thiserror = { workspace = true }

sf-core = { path = "../sf-core" }

multiaddr = "0.18.2"

anyhow = { workspace = true }

futures = { version = "0.3" }

tracing = { workspace = true }

reqwest = { version = "0.12" }

url = { version = "2" }

hex = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
if-watch = { version = "3.1", features = ["tokio"] }

tokio = { workspace = true, features = ["full"] }

if-addrs = { version = "0.13" }

tower-http = { workspace = true, features = ["cors", "trace"] }

hyper-serve = { version = "0.6", features = ["tls-rustls"] }

axum = { workspace = true, features = ["tokio", "http2", "http1"] }

moq-native = { version = "0.6.8" }
web-transport = { version = "0.8.2" }

bytes = { version = "1.10" }

[lints]
workspace = true
