[package]
name = "sf-wt"
version = "0.1.0"
edition = "2024"

[dependencies]
moq-native = { version = "0.6" }
moq-transfork = { version = "0.12" }

clap = { workspace = true, features = ["derive"] }

anyhow = { workspace = true }

bytes = "1"

tokio = { workspace = true, features = ["full"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { workspace = true, features = ["tokio", "http2", "http1"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

hyper-serve = { version = "0.6", features = ["tls-rustls"] }

http-body = "1"

prost = { workspace = true,  features = ["derive", "std"]}

[build-dependencies]
prost-build = { version = "0.13.5" }

[lints]
workspace = true
